# celia_voice_verification_multiplatform_app

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: env.d.ts  main.ts  styles.css
frontend/src/core/audio/: AudioFacade.ts  types.ts
frontend/src/core/audio/strategies/: AutomotiveStrategy.ts  NativeBridgeStrategy.ts  TauriDesktopStrategy.ts  TauriMobileStrategy.ts  WebStrategy.ts
frontend/src/router/: index.ts
frontend/src/stores/: audioSession.ts
frontend/src/views/: VoiceConsoleView.vue
scripts/: build-cpp-windows.cmd  configure-cpp-windows.cmd  make-windows-installer.ps1  package-windows.cmd  validate-package-models.cmake  windows-build-env.cmd
src-cpp/: main.cpp  main.h
src-cpp/app/: CeliaApp.cpp  CeliaApp.h  Json.cpp  Json.h  StaticFileServer.cpp  StaticFileServer.h
src-cpp/audio/: AudioService.cpp  AudioService.h  SherpaOnnxService.cpp  SherpaOnnxService.h  WhisperService.cpp  WhisperService.h
src-cpp/whisper.cpp/examples/: CMakeLists.txt
src-cpp/whisper.cpp/examples/bench/: CMakeLists.txt
src-cpp/whisper.cpp/examples/cli/: CMakeLists.txt
src-cpp/whisper.cpp/examples/deprecation-warning/: CMakeLists.txt
src-cpp/whisper.cpp/examples/quantize/: CMakeLists.txt
src-cpp/whisper.cpp/examples/server/: CMakeLists.txt
src-cpp/whisper.cpp/examples/vad-speech-segments/: CMakeLists.txt
src-cpp/whisper.cpp/ggml/src/: CMakeLists.txt
src-cpp/whisper.cpp/src/: CMakeLists.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/native/cpp/: CMakeLists.txt  celia_audio_core.cpp  celia_audio_core.h
src-tauri/src/: lib.rs  main.rs  model_paths.rs  native_audio.rs
tools/windows-installer/: installer_stub.cpp
