[package]
name = "celia_voice_verification"
version = "0.1.0"
description = "Celia voice verification desktop shell"
authors = ["Celia Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "celia_voice_verification_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "celia_voice_verification"
path = "src/main.rs"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[features]
default = ["desktop"]
desktop = ["dep:cpal"]
mobile = []
automotive = []
onnxruntime = []
whisper-cpp = []

[dependencies]
cpal = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
